# okf-tools

./: .gitignore  README.md  pyproject.toml
.claude/skills/okf-convert-claude-obsidian/: SKILL.md
.claude/skills/okf-ingest/: SKILL.md
.claude/skills/okf-init/: SKILL.md
.claude/skills/okf-query/: SKILL.md
.claude/skills/okf-validate/: SKILL.md
.opencode/skills/okf-convert-claude-obsidian/: SKILL.md
.opencode/skills/okf-ingest/: SKILL.md
.opencode/skills/okf-query/: SKILL.md
.opencode/skills/okf-validate/: SKILL.md
openspec/changes/archive/2026-06-22-okf-core-skills/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-okf-wikilink-to-markdown/: design.md  proposal.md  (+1 more)
openspec/specs/okf-bundle/: spec.md
openspec/specs/okf-convert/: spec.md
openspec/specs/okf-ingest/: spec.md
openspec/specs/okf-query/: spec.md
openspec/specs/okf-validate/: spec.md
openspec/specs/wikilink-conversion/: spec.md
scripts/: install-skills.ps1  install-skills.sh  okf-convert-claude-obsidian.ps1  okf-convert-claude-obsidian.py  okf-convert-claude-obsidian.sh  okf-ingest.ps1  okf-ingest.py  okf-ingest.sh  okf-init.ps1  okf-init.py  okf-init.sh  okf-query.ps1  okf-query.py  okf-query.sh  okf-validate.ps1  okf-validate.py  okf-validate.sh  okf_bundle.py  okf_frontmatter.py  okf_links.py
scripts/lib/: okf_lib.ps1  okf_lib.sh
scripts/tests/: conftest.py  test_bundle.py  test_frontmatter.py  test_links.py
skills/okf-convert-claude-obsidian/: SKILL.md
skills/okf-ingest/: SKILL.md
skills/okf-init/: SKILL.md
skills/okf-validate/: SKILL.md
(+6 files in other folders)
