[project]
name = "okf-tools"
version = "0.1.0"
description = "Hermes skills and scripts for the Open Knowledge Format"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "markdownify>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
